<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="PushoverRequest" Id="{f17a5064-8416-4c04-9856-ade6756db10d}">
    <Declaration><![CDATA[TYPE INTERNAL PushoverRequest :
STRUCT
  TokenLength : INT;
  UserLength : INT;
  TitleLength : INT;  
  MessageLength : INT;
  Token : STRING;
  User : STRING;
  Title : STRING(255);
  Message : STRING(255);
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>